--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.2.0",
   "description": "Decontextualize your methods",
   "main": "index.js",
+  "repository": "https://github.com/nickb1080/demethodize.git",
   "scripts": {
     "test": "mocha -R spec test.js",
     "bench": "node bench.js",
     "bench100": "node bench.js 100",
     "bench1000": "node bench.js 1000"
   },
-  "author": "",
+  "author": "Nick Bottomley (github.com/nickb1080)",
   "license": "MIT",
   "devDependencies": {
     "benchmark": "^1.0.0",
