--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "test": "mocha -R spec test.js",
     "bench": "node bench.js",
     "bench100": "node bench.js 100",
-    "bench1000": "node bench.js 1000"
+    "bench1000": "node bench.js 1000",
+    "cover": "node --harmony ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- ./test/ -R spec",
+    "codecovio": "npm run cover; cat ./coverage/lcov.info | ./node_modules/codecov.io/bin/codecov.io.js --verbose"
   },
   "author": "Nick Bottomley (github.com/nickb1080)",
   "license": "MIT",
   "devDependencies": {
     "benchmark": "^1.0.0",
     "chai": "^1.9.1",
+    "codecov.io": "0.0.8",
+    "istanbul": "^0.3.5",
     "mocha": "^1.21.4"
   }
 }
