--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "main": "index.js",
   "repository": "https://github.com/nickb1080/demethodize.git",
   "scripts": {
-    "test": "mocha -R spec test.js",
-    "bench": "node bench.js",
-    "bench100": "node bench.js 100",
-    "bench1000": "node bench.js 1000",
-    "cover": "node --harmony ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- ./test.js -R spec",
-    "codecovio": "npm run cover; cat ./coverage/lcov.info | ./node_modules/codecov.io/bin/codecov.io.js --verbose"
+    "test": "mocha -R spec ./test",
+    "bench": "node ./bench",
+    "bench100": "node ./bench 100",
+    "bench1000": "node ./bench 1000",
+    "cover": "node --harmony ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- ./test -R spec",
+    "codecovio": "npm run cover; cat ./coverage/lcov.info | ./node_modules/codecov.io/bin/codecov.io.js --verbose",
+    "build": "babel ./src/index.js --out-file ./lib/index.js"
   },
   "author": "Nick Bottomley (github.com/nickb1080)",
   "license": "MIT",
   "devDependencies": {
+    "babel": "^4.7.16",
     "benchmark": "^1.0.0",
     "chai": "^1.9.1",
     "codecov.io": "0.0.8",
